--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calisthenics Mastery</title>
+  <link rel="icon" href="assets/icons/favicon-32x32.png">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
